add verify endpoint
